--- a/examples/pic32/Cargo.toml
+++ b/examples/pic32/Cargo.toml
@@ -12,7 +12,7 @@ embedded-hal = "0.2.6"
 pic32-hal = { version = "0.6.1", features = ["pic32mx2xxfxxxb", "usb-device"] }
 panic-halt = "0.2.0"
 usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
-usbd-audio = { path = "../.." }
+usbd-audio = "0.1.0"
 pic32-config-sector = "0.1.2"
 
 [profile.release]
