--- a/examples/pic32/Cargo.toml
+++ b/examples/pic32/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 mips-rt = "0.3.0"
-alloc-pic32 = { git = "https://github.com/kiffie/alloc-pic32.git" }
+mips-mcu-alloc = "0.5.0"
 embedded-hal = "0.2.6"
 pic32-hal = { version = "0.6.1", features = ["pic32mx2xxfxxxb", "usb-device"] }
 panic-halt = "0.2.0"
