update the stm32f4xx version

--- a/examples/stm32f4xx/Cargo.toml
+++ b/examples/stm32f4xx/Cargo.toml
@@ -11,9 +11,9 @@ panic-halt = "0.2.0"
 cortex-m = "0.6"
 cortex-m-rt = "0.7.3"
 
-stm32f4xx-hal = { version = "0.15.0", features = ["stm32f411", "rt", "usb_fs"] }
-usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
-usbd-audio = "0.1.0"
+stm32f4xx-hal = { version = "0.20", features = ["stm32f407", "usb_fs", "otg-fs"] }
+usb-device = { version = "0.3", features = ["control-buffer-256"] }
+usbd-audio = { path = "../.." }
 
 # Tracing
 rtt-target = { version = "0.3.0", features = ["cortex-m"] }
