--- a/examples/pic32/Cargo.toml
+++ b/examples/pic32/Cargo.toml
@@ -1,19 +1,20 @@
 [package]
 name = "usb-audio-example"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Stephan <kiffie@mailbox.org>"]
 license = "MIT OR Apache-2.0"
 edition = "2021"
 
 [dependencies]
 mips-rt = "0.3.0"
-mips-mcu-alloc = "0.5.0"
-embedded-hal = "0.2.6"
-pic32-hal = { version = "0.6.1", features = ["pic32mx2xxfxxxb", "usb-device"] }
-panic-halt = "0.2.0"
-usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
-usbd-audio = "0.1.0"
-pic32-config-sector = "0.1.2"
+mips-mcu = { version = "0.3.1", features = ["critical-section-single-core"] }
+mips-mcu-alloc = "0.6.2"
+embedded-hal = "1.0.0"
+pic32-hal = { version = "0.13.0", features = ["pic32mx2xxfxxxb", "usb-device"] }
+panic-halt = "1.0.0"
+usb-device = { version = "0.3.2", features = ["control-buffer-256"] }
+usbd-audio = { path = "../.."}
+pic32-config-sector = "0.3.0"
 
 [profile.release]
 opt-level = 2
